--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
             <li role="presentation" ><a href="./schedule.html">Schedule</a></li>
             <li role="presentation"><a href="./submission.html">Submission</a></li>
             <li role="presentation" ><a href="./publication.html">Publication</a></li>
-            <li role="presentation" class='active'><a href="">Company</a></li>
-	    <li role="presentation"><a href="./contact.html">Contact</a></li>
+            <li role="presentation"><a href="./company.html">Company</a></li>
+	           <li role="presentation" class='active'><a href="">Contact</a></li>
           </ul>
         </nav>
         </div>
@@ -83,33 +83,60 @@
   	<br>
 
      <div class="text">
-     <h4 class="title" >Company involvment</h4>
+     <h4 class="title" >Contacts</h4>
      </div>
+     <p class="text">
+     To be updated about our activities please sign in to the VarI <a href="https://varicosi.slack.com/">slack</a> and/or
+     <a href="https://twitter.com/varicosi">twitter</a> channels.
+     For more information about the VarI cosi initiative please mail one of the organizers listed below.
+     <br><br><br>
 
-    <p class="text">
-    Our COSI aims to foster Industry/Academia collaborations in the field of varianti-related research. In light of this effort,
-    a few opportunities for companies to showcase products and services to the conference delegates hae been created.
-    These 15-minute presentations are designed to create awareness of new technologies, services, etc (in a non-hard sales format).
-    The cost for a Company Presentation is $1500. The cost does not include registration and the presenter must be registered to
-    attend the conference. Requests for Company Presentations will be reviewed by the Organizing Committee.
-    Space is limited and it may not be possible to accept all Company Presentation requests.
+       <table class="paper" border=0>
+      <tbody>
+      <td valign=top>
+             <img height="110" src="img/emidio.jpg"> &nbsp; &nbsp;
+       </td>
+       <td>
+       <p class="text">
+      <span style="color:#d97b2d;font-weight:400;">Emidio Capriotti</span><br>
+        Department of Pharmacy and Biotechnology<br>
+        University of Bologna<br>
+        Bologna (Italy)<br>
+        e-mail: emidio.capriotti@unibo.it<br><br>
+      </td></tr>
 
+      <tr>
+        <td valign=top>
+          <img height="110" src="img/hannah.png"> &nbsp; &nbsp;
+        </td>
+      <td>
+        <p class="text">
+      <span style="color:#d97b2d;font-weight:400;">Hannah Carter</span><br>
+        Division of Medical Genetics<br>
+        University of California, San Diego<br>
+        La Jolla, CA (USA)<br>
+        e-mail: hkcarter@ucsd.edu<br><br>
+      </td></tr>
+
+      <tr>
+      <td valign=top>
+        <img height="110" src="img/antonio.png"> &nbsp;  &nbsp;
+      </td>
+      <td>
+      <p class="text">
+      <span style="color:#d97b2d;font-weight:400;">Antonio Rausell</span><br>
+        Clinical Bioinformatics Lab<br>
+        Imagine Institute for Genetic Diseases<br>
+        Paris, (France)<br>
+        e-mail: antonio.rausell@institutimagine.org<br>
+      </td></tr>
+    </tbody>
+  </table>
+
+
+
+    </p>
     <br><br>
-
-    <div class="text">
-    <h4 class="title" >Sponsorship</h4>
-    </div>
-    <p class="text">
-    We welcome company contributions to support the VarI-COSI activities.
-    Non-presenting companies are welcome to purchase a supporting member registration at the level of $800.
-    This registration includes: poster space in the COSI session, mention in the VarI-COSI program and ability
-    to distribute company material to VarI-COSI participants.
-    <br><br>
-
-    <b>Note</b>: For information about the sponsorship of the VarI-COSI session and other activities of the
-    ISMB conference please contact <a href="mailto:steven@iscb.org">Steven Leard</a> for company.
-
-    <br>
     <!---
     <div class="text">
     <h4 class="title" >Meeting program</h4>
@@ -129,13 +156,13 @@
 
 
     </p>
+
+    <br>
+    <br>
     -->
-    <br>
-    <br>
-    
     <div class='footer-ok'><div>
 
-    </div>
+      </div>
     </div> <!-- /container -->
 
 
