--- a/publication.html
+++ b/publication.html
@@ -69,9 +69,9 @@
           <ul class="nav nav-pills">
             <li role="presentation" ><a href="./index.html">Home</a></li>
             <li role="presentation" ><a href="./schedule.html">Schedule</a></li>
-            <li role="presentation"><a href="./submission.html">Submission</a></li>
-            <li role="presentation" ><a href="./publication.html">Publication</a></li>
-            <li role="presentation" class='active'><a href="">Company</a></li>
+            <li role="presentation" ><a href="./submission.html">Submission</a></li>
+            <li role="presentation" class='active'><a href="">Publication</a></li>
+            <li role="presentation" ><a href="./company.html">Company</a></li>
 	    <li role="presentation"><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -83,32 +83,67 @@
   	<br>
 
      <div class="text">
-     <h4 class="title" >Company involvment</h4>
+     <h4 class="title" >Publication</h4>
      </div>
 
-    <p class="text">
-    Our COSI aims to foster Industry/Academia collaborations in the field of varianti-related research. In light of this effort,
-    a few opportunities for companies to showcase products and services to the conference delegates hae been created.
-    These 15-minute presentations are designed to create awareness of new technologies, services, etc (in a non-hard sales format).
-    The cost for a Company Presentation is $1500. The cost does not include registration and the presenter must be registered to
-    attend the conference. Requests for Company Presentations will be reviewed by the Organizing Committee.
-    Space is limited and it may not be possible to accept all Company Presentation requests.
+  <div class="text">
 
+    <table class="paper" border=0>
+        <tbody><tr><td valign=top>
+    <tr>
+    <td valign=top>
+    In the orevious editions of the VarI-COSI the organizers invited the authors of the presented papers and strong posters
+    to submit their work for the next special issue publication. The selected manuscripts have been published in the
+    following BioMed Central journals.
     <br><br>
+      <ul>
+      <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2016</span>
+          special issue published on
+          <a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-20-supplement-8" target=_blank>
+          BMC Genomics</a>,
+          <a href="https://bmcmedgenomics.biomedcentral.com/articles/supplements/volume-12-supplement-6" target=_blank>
+          BMC Medical Genomics</a> and
+          <a href="https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-20-supplement-14" target=_blank>
+          BMC Bioinformatics.
+          </a>
+    </ul><ul>
+    <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2018</span>
+        special issue published on
+        <a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-18-supplement-5" target=_blank>
+        BMC Genomics</a> and
+        <a href="https://bmcbiophys.biomedcentral.com/articles/supplements/volume-10-supplement-1" target=_blank>BMC Biophysics</a>.
+    </ul><ul>
+    <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2015</span>
+            special issue published on
+            <a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-17-supplement-2" target=_blank>
+            BMC Genomics</a>
+    </ul><ul>
+      <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2014</span>
+        special issue published on
+        <a href="https://bmcgenomics.biomedcentral.com/articles/supplements/volume-16-supplement-8" target=_blank>
+        BMC Genomics</a>.
+    </ul><ul>
+      <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2013</span>
+        special issue published on
+        <a href="http://www.biomedcentral.com/bmcgenomics/supplements/15/S4" target=_blank>
+        BMC Genomics</a>
+      </ul><ul>
+        <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2012</span>
+          special issue published on
+          <a href="http://www.biomedcentral.com/bmcgenomics/supplements/14/S3" target=_blank>
+          BMC Genomics</a>
+      </ul><ul>
+      <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2011</span>
+          special issue published on
+          <a href="http://www.biomedcentral.com/bmcgenomics/supplements/13/S4" target=_blank>
+          BMC Genomics</a>
+      </ul>
 
-    <div class="text">
-    <h4 class="title" >Sponsorship</h4>
-    </div>
-    <p class="text">
-    We welcome company contributions to support the VarI-COSI activities.
-    Non-presenting companies are welcome to purchase a supporting member registration at the level of $800.
-    This registration includes: poster space in the COSI session, mention in the VarI-COSI program and ability
-    to distribute company material to VarI-COSI participants.
-    <br><br>
 
-    <b>Note</b>: For information about the sponsorship of the VarI-COSI session and other activities of the
-    ISMB conference please contact <a href="mailto:steven@iscb.org">Steven Leard</a> for company.
-
+    </td></tr>
+    </tbody>
+    </table>
+    </p>
     <br>
     <!---
     <div class="text">
@@ -129,13 +164,13 @@
 
 
     </p>
+
+    <br>
+    <br>
     -->
-    <br>
-    <br>
-    
     <div class='footer-ok'><div>
 
-    </div>
+      </div>
     </div> <!-- /container -->
 
 
