--- a/schedule.html
+++ b/schedule.html
@@ -45,7 +45,7 @@
         <span style="color:#d97b2d;font-size:50%">o</span><span style="font-size:50%">f  </span>
         <span style="color:#d97b2d;font-size:50%">s</span><span style="font-size:50%">pecial </span>
         <span style="color:#d97b2d;font-size:50%">i</span><span style="font-size:50%">nterest </span>
-
+      
         </div>
         <!--
         <div class='biofold' ><span style="color:#c31e27;">Bio</span><span style="color:#4689a3;">molecules</span> <span style="color:#c31e27;">Fol</span><span style="color:#4689a3;">ding and </span><span style="color:#c31e27;">D</span><span style="color:#4689a3;">isease</span></div><br>
@@ -68,10 +68,10 @@
         <nav>
           <ul class="nav nav-pills">
             <li role="presentation" ><a href="./index.html">Home</a></li>
-            <li role="presentation" ><a href="./schedule.html">Schedule</a></li>
+            <li role="presentation" class='active'><a href="">Schedule</a></li>
             <li role="presentation"><a href="./submission.html">Submission</a></li>
             <li role="presentation" ><a href="./publication.html">Publication</a></li>
-            <li role="presentation" class='active'><a href="">Company</a></li>
+            <li role="presentation" ><a href="./company.html">Company</a></li>
 	    <li role="presentation"><a href="./contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -83,32 +83,40 @@
   	<br>
 
      <div class="text">
-     <h4 class="title" >Company involvment</h4>
+     <h4 class="title" >Schedule</h4>
      </div>
 
-    <p class="text">
-    Our COSI aims to foster Industry/Academia collaborations in the field of varianti-related research. In light of this effort,
-    a few opportunities for companies to showcase products and services to the conference delegates hae been created.
-    These 15-minute presentations are designed to create awareness of new technologies, services, etc (in a non-hard sales format).
-    The cost for a Company Presentation is $1500. The cost does not include registration and the presenter must be registered to
-    attend the conference. Requests for Company Presentations will be reviewed by the Organizing Committee.
-    Space is limited and it may not be possible to accept all Company Presentation requests.
+  <div class="text">
 
+    <table class="paper" border=0>
+        <tbody><tr><td valign=top>
+    <tr>
+    <td valign=top>
+    The following is a preliminary list of dates and deadlines. Please check back soon for a more complete schedule
+    or contact the VarI-COSI organizers with any questions and/or concerns
     <br><br>
-
-    <div class="text">
-    <h4 class="title" >Sponsorship</h4>
-    </div>
-    <p class="text">
-    We welcome company contributions to support the VarI-COSI activities.
-    Non-presenting companies are welcome to purchase a supporting member registration at the level of $800.
-    This registration includes: poster space in the COSI session, mention in the VarI-COSI program and ability
-    to distribute company material to VarI-COSI participants.
-    <br><br>
-
-    <b>Note</b>: For information about the sponsorship of the VarI-COSI session and other activities of the
-    ISMB conference please contact <a href="mailto:steven@iscb.org">Steven Leard</a> for company.
-
+    <ul>
+    <li><span style="color:#d97b2d;font-weight:400;">Poster Abstract and Presentation Proposal submissions open: </span> Monday, February 1, 2021
+    </ul>
+    <ul>
+    <li><span style="color:#d97b2d;font-weight:400;">Early Abstracts Submission Deadline:</span> Thursday, May 6, 2021 (11:59 PM EDT)
+    </ul>
+    <ul>
+    <li><span style="color:#d97b2d;font-weight:400;">Late Poster Submissions Open:</span> Monday, May 10, 2021
+    </ul>
+    <ul>
+    <li><span style="color:#d97b2d;font-weight:400;">Talk and Poster Acceptance Notifications:</span> Thursday, May 27, 2021
+    </ul>
+    <ul>
+    <li><span style="color:#d97b2d;font-weight:400;">Late Poster Submissions Deadline:</span> Thursday, June 3, 2021 (11:59 PM EDT)
+    </ul>
+    <ul>
+    <li><span style="color:#d97b2d;font-weight:400;">Late Poster Acceptance Notifications:</span> Thursday, June 10, 2021
+    </ul>
+    </td></tr>
+    </tbody>
+    </table>
+    </p>
     <br>
     <!---
     <div class="text">
@@ -129,13 +137,13 @@
 
 
     </p>
+
+    <br>
+    <br>
     -->
-    <br>
-    <br>
-    
     <div class='footer-ok'><div>
 
-    </div>
+      </div>
     </div> <!-- /container -->
 
 
