--- a/index.html
+++ b/index.html
@@ -126,11 +126,15 @@
     We are interested in works presenting original studies in all the fields of genetic variants research including,
     but not limited to "genetic variants in": sequence analysis, protein structure and function,
     protein interactions and molecular networks, transcriptomics and gene regulation, disease models and epidemiology,
-    population genetics and evolution, comparative genomics. Abstracts and posters can be submitted through the following
-    link <br><br>
+    population genetics and evolution, comparative genomics. 
+    <!--
+    Abstracts and posters can be submitted through the following
+    link
+    <br><br>
     <center>
     <a href="https://easychair.org/my/conference?conf=ismbeccb2021abstracts#" target=_blank><img height="22" src="img/submit.png"></a>
     </center>
+    -->
     </td></tr>
     </tbody>
     </table>
