--- a/publication.html
+++ b/publication.html
@@ -92,7 +92,7 @@
         <tbody><tr><td valign=top>
     <tr>
     <td valign=top>
-    In the orevious editions of the VarI-COSI the organizers invited the authors of the presented papers and strong posters
+    In the previous editions of the VarI-COSI the organizers invited the authors of the presented papers and strong posters
     to submit their work for the next special issue publication. The selected manuscripts have been published in the
     following BioMed Central journals.
     <br><br>
