--- a/schedule.html
+++ b/schedule.html
@@ -83,44 +83,320 @@
   	<br>
 
      <div class="text">
-     <h4 class="title" >Key dates</h4>
+     <h4 class="title" >VarI COSI 2021</h4>
      </div>
 
   <div class="text">
+    <p class="text">
+      <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the Virtual ISMB/ECCB 2021<br>
+      <span style="color:#d97b2d;font-weight:400;">When:</span> 11:00 - 15:20, 29-30 July 2021. All listed times are in <b>UTC</b> <br>
+      <span style="color:#d97b2d;font-weight:400;">Where:</span> Online Meeting.
+    </p>
 
-    <table class="paper" border=0>
-        <tbody><tr><td valign=top>
-    <tr>
-    <td valign=top>
-    The following is a preliminary list of dates and deadlines. Please check back soon for a more complete schedule
-    or contact the VarI-COSI organizers with any questions and/or concerns
-    <br><br>
-      <ul>
-      
-      <li><span style="color:#d97b2d;font-weight:400;">Poster Abstract and Presentation Proposal submissions open: </span> Monday, February 1, 2021
-    </ul><ul>
-      <li><span style="color:#d97b2d;font-weight:400;">Early Abstracts Submission Deadline:</span> Thursday, May 6, 2021 (11:59 PM EDT)
-    </ul>
-    <ul>
-          <li><span style="color:#d97b2d;font-weight:400;">Late Poster Submissions Open:</span> Monday, May 10, 2021
-          </ul>
-          <ul>
-          <li><span style="color:#d97b2d;font-weight:400;">Talk and Poster Acceptance Notifications:</span> Thursday, May 27, 2021
-          </ul>
-          <ul>
-          <li><span style="color:#d97b2d;font-weight:400;">Late Poster Submissions Deadline:</span> Thursday, June 3, 2021 (11:59 PM EDT)
-          </ul>
-          <ul>
-          <li><span style="color:#d97b2d;font-weight:400;">Late Poster Acceptance Notifications:</span> Thursday, June 10, 2021
-          </ul>
-	  <ul>
-          <li><span style="color:#d97b2d;font-weight:400;">VarI COSI session at the ISMB/ECCB 2021:</span> Thursday, July 29 and 30, 2021
-          </ul>
+    <table  border="0"  cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" >
+      <colgroup>
+        <col style="width:15%">
+        <col style="width:85%">
+        </colgroup>
+      <tbody>
+      <tr>
+        <td colspan="2"><span><p class="text-small"><br><br><strong>
+              <img src="/img/PU.gif" width="12" height="12"> Session 1 - Thursday July 29, 2021
+<!--
+Annotation and prediction of structural/functional impacts of genetic variants.
+--->
+        </strong>
+        <br><br></span></td>
+      </tr>
+      <tr>
+        <td><span><p class="text-small"> <strong>11:00 - 11:10</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small"> Opening remarks<br>&nbsp; </span></td>
+      </tr>
 
-    </td></tr>
-    </tbody>
+      <tr>
+        <td><span><p class="text-small"><strong>11:10 - 12:00</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small"><strong>Keynote talk:</strong>
+
+        <a href="http://www.lcqb.upmc.fr/users/carbone" target=blank><strong>Alessandra Carbone</strong></a>.
+        Sorbonne University, Paris, France.
+        <br>
+        <i>
+         Mutations in viruses and humans.
+        </i>
+        </span></td>
+   </tr>
+
+      <tr>
+
+        <td><span><p class="text-small"><strong>12:00 - 12:20</strong><br>&nbsp;<br>&nbsp;
+        </span></td>
+        <td><span><p class="text-small"><span><p class="text-small"><strong>Proceedings talk:</strong>
+
+        <u>Chirag Jain.</u> Indian Institute of Science,  Bangalore, India.  <br><i>
+        A variant selection framework for genome graphs.</i><br>&nbsp;
+
+        </span></td>
+      </tr>
+
+      <tr>
+      <td><span><p class="text-small"><strong>12:20 - 12:40</strong><br>&nbsp;</span></td>
+      <td><span><p class="text-small"><b>Coffee Break</b><br>&nbsp;</span></td>
+      </tr>
+
+<tr>
+        <td><span><p class="text-small"><strong>12:40 - 12:50</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+
+        <u>Abhirami Ram.</u>TCS Research, India.
+        <br><i>
+        Identifying Factors Important for Conservation at Sites of Synonymous Variation.
+        </i>
+</span></td>
+
+      </tr>
+      <tr>
+        <td><span><p class="text-small"><strong>12:50 - 13:10</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+
+        <u>Bian Li.</u>  Vanderbilt University, Nashville (TN), USA.
+  <br><i>
+ The structural landscape of constrained sites in the human proteome.
+        </i>
+
+        </span></td>
+      </tr>
+
+
+            <tr>
+              <td><span><p class="text-small"><strong>13:10 - 14:00</strong><br>&nbsp;<br>&nbsp;</span></td>
+              <td><span><p class="text-small"><strong>Keynote talk:</strong>
+
+              <a href="https://www.cs.jhu.edu/faculty/ben-langmead/" target=blank><strong>Ben Langmead</strong></a>.
+              Johns Hopkins University, Baltimore (MD), USA.
+              <br>
+              <i>
+               Pan-genomic advances for fighting reference bias.
+              </i>
+              <br>&nbsp;
+              </span></td>
+         </tr>
+
+         <tr>
+         <td><span><p class="text-small"><strong>14:00 - 14:20</strong><br>&nbsp;</span></td>
+         <td><span><p class="text-small"><b>Coffee Break</b><br>&nbsp;</span></td>
+         </tr>
+
+
+
+      <tr>
+        <td><span><p class="text-small"><strong>14:20 - 14:40</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+
+        <u>Joanna von Berg.</u>  University Medical Center Utrecht, Netherlands.
+  <br><i>
+           PolarMorphism enables discovery of genetic variants with shared effect across multiple traits from GWAS summary statistics. <br>
+        </i>
+
+        </span></td>
+      </tr>
+      <tr>
+        <td><span><p class="text-small"><strong>14:40 - 14:50</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+
+        <u>Elena Bernabeu.</u>  The University of Edinburgh, Edinburgh, United Kingdom. <br><i>
+           Sex differences in genetic architecture in UK Biobank. <br>
+        </i>
+
+        </span></td>
+      </tr>
+
+      <tr>
+        <td><span><p class="text-small"><strong>14:50 - 15:00</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+
+        <u>Yingying Wei.</u>  The Chinese University of Hong Kong, Hong Kong. <br><i>
+          Identification of Ethnicity-Specific Associations in Multi-Ethnic Genome-Wide Association Studies. <br>
+        </i>
+
+        </span></td>
+      </tr>
+
+      <tr>
+        <td><span><p class="text-small"><strong>15:00 - 15:20</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+
+        <u>Meghana Pagadala .</u>  University of California San Diego, La Jolla (CA), USA. <br><i>
+          Germline variants that influence the tumor immune microenvironment also drive response to immunotherapy. <br>
+        </i>
+
+        </span></td>
+      </tr>
+
+
+      <tr>
+        <td colspan="2"><span><p class="text-small"><strong><br />
+            <br />
+              <img src="/img/PU.gif" alt="" width="12" height="12" />
+              Session 2 - Friday July 30, 2021
+<!--
+Genetic variants as effectors of change: disease and evolution. <br />
+-->
+
+        <br /><br />
+        </strong></span></td>
+        </tr>
+        <tr>
+          <td><span><p class="text-small"><strong>11:00 - 11:50</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small"><strong>Keynote talk:</strong>
+
+      <a href="https://www.crg.eu/ben_lehner"target=blank><strong>Ben Lehner</strong></a>.
+        Centre for Genomic Regulation (CRG), Barcelona, Spain.
+        <br>
+         <i>
+         Sequence to energy and structure.
+         </i>
+
+        </span></td>
+      </tr>
+
+
+
+   <tr>
+        <td><span><p class="text-small"><strong>11:50 - 12:10</strong><br>&nbsp;<br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+
+          <u>Giulia Babbi.</u> University of Bologna, Bologna, Italy.
+          <br>
+          <i>
+          Physico-chemical and structural features of pathogenic and benign human protein missense variations collected from <br> HUMSAVAR and ClinVar.
+        </i>
+
+
+        </span></td>
+      </tr>
+      <tr>
+
+        <tr>
+             <td><span><p class="text-small"><strong>12:10 - 12:20</strong><br>&nbsp;<br>&nbsp;<br>&nbsp;</span></td>
+             <td><span><p class="text-small">
+
+               <u>Joseph Ng.</u> King's College, London, United Kingdom.
+               <br>
+               <i>
+               Protein structural consequences of DNA mutational signatures: A meta-analysis of somatic variants and deep mutational <br> scanning data.<br>&nbsp;
+             </i>
+
+
+             <tr>
+             <td><span><p class="text-small"><strong>14:00 - 14:20</strong><br>&nbsp;</span></td>
+             <td><span><p class="text-small"><b>Coffee Break</b><br>&nbsp;</span></td>
+             </tr>
+
+             </span></td>
+           </tr>
+       <tr>
+             <td><span><p class="text-small"><strong>12:40 - 12:55</strong><br>&nbsp;</span></td>
+             <td><span><p class="text-small"><b>VarI sponsor:</b>
+
+            <b><a href="https://www.variantyx.com/" target=blank>Alexander Kaplun - Variantyx</a></b>.
+            <br>
+             <i>A unique solution to a (non) unique problem: calling variants in non-uniquely mappable regions using short-read WGS data.
+     </i>
+             </span></td>
+           </tr>
+
+           <tr>
+                 <td><span><p class="text-small"><strong>12:55 - 14:00</strong><br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;</span></td>
+                 <td><span><p class="text-small"><b>VarI roundtable:</b> <br>
+                <a href="https://dbm.rutgers.edu/personnel/yana-bromberg.html" target=blank>Yana Bromberg</a>, Rutger University,  New Brunswick (NJ), USA <br>
+                <a href="https://www.gs.washington.edu/faculty/fowler.htm" target=blank>Douglas Fowler</a>, University of Washington, Seattle (WA), USA <br>
+                <a href="https://www.genome.gov/staff/Daniel-Gilchrist-PhD" target=blank>Daniel Gilchrist</a>, NHGRI, Bethesda (MD), USA <br>
+                <a href="https://www.ccs.neu.edu/home/radivojac/" target=blank>Predrag Radivojac</a>, Northeastern University, Boston (MA), USA.
+
+                </b>.
+                <br>
+                 </span></td>
+          </tr>
+
+          <tr>
+           <td><span><p class="text-small"><br /><strong>14:00 - 14:20</strong><br>&nbsp;</span></td>
+           <td><span><p class="text-small"><br /><b>Coffee Break.<br>&nbsp;
+           </span></td>
+         </tr>
+
+        <tr>
+          <td><span><p class="text-small"><strong>14:20 - 14:30</strong><br>&nbsp;</span></td>
+          <td><span><p class="text-small">
+            <u>Steven E. Brenner.</u>University of California Berkeley, Berkeley (CA), USA.
+          <br>
+          <i>
+           The role of exome sequencing in newborn screening.
+          </i>
+          </span></td>
+
+        </tr>
+
+        <tr>
+          <td><span><p class="text-small"><strong>14:30 - 14:40</strong><br>&nbsp;</span></td>
+          <td><span><p class="text-small">
+            <u>Marc Vaisband.</u> Salzburg Cancer Research Institute, Salzburg, Austria.
+          <br>
+          <i>
+           Validation of genetic variants from NGS data using Deep Convolutional Neural Networks.
+          </i>
+          </span></td>
+
+        </tr>
+
+        <tr>
+          <td><span><p class="text-small"><strong>14:40 - 15:00</strong><br>&nbsp;</span></td>
+          <td><span><p class="text-small">
+            <u>Martin Kircher.</u> Charite University, Berlin, Germany.
+          <br>
+          <i>
+           CADD-SV -- a framework to score the effects of structural variants in health and disease.
+          </i>
+          </span></td>
+
+        </tr>
+
+        <tr>
+          <td><span><p class="text-small"><strong>15:00 - 15:10</strong><br>&nbsp;</span></td>
+          <td><span><p class="text-small">
+            <u>Francisco Requena.</u> Imagine Institute for Genetic Diseases, Paris, France.
+          <br>
+          <i>
+           CNVxplorer: a web tool to assist clinical interpretation of CNVs in rare disease patients.
+          </i>
+          </span></td>
+
+        </tr>
+
+        <tr>
+          <td><span><p class="text-small"><strong>15:10 - 15:20</strong><br>&nbsp;</span></td>
+          <td><span><p class="text-small">
+          <u>Stephen Yi.</u> University of Texas at Austin, Austin (TX), USA.
+          <br>
+          <i>
+           Emerging gain-of-function mutations in disease: their computational interpretation and characterization.
+          </i>
+          </span></td>
+
+        </tr>
+
+      <tr>
+        <td><span><p class="text-small"><strong>15:20 - 15:25</strong></span></td>
+        <td><span><p class="text-small">Closing remarks.</span></td>
+      </tr>
+      <!--
+      <tr>
+        <td><span class="textzone"><strong>18:05 - 20:00</strong></span></td>
+        <td><span class="textzone"><b>Online Poster session with the authors.</b></span></td>
+      </tr>
+    -->
     </table>
     </p>
+    <br>
     <br>
     <!---
     <div class="text">
