pages/vari-2021.html css/bootstrap.min.css.map

--- a/schedule.html
+++ b/schedule.html
@@ -88,23 +88,66 @@
 
   <div class="text">
     <p class="text">
-      <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the Virtual ISMB/ECCB 2021<br>
-      <span style="color:#d97b2d;font-weight:400;">When:</span> 11:00 - 15:20, 29-30 July 2021. All listed times are in <b>UTC</b> <br>
-      <span style="color:#d97b2d;font-weight:400;">Where:</span> Online Meeting.
+      <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the Virtual ISMB 2022<br>
+      <span style="color:#d97b2d;font-weight:400;">When:</span> 12 July 2022</b> <br>
+      <span style="color:#d97b2d;font-weight:400;">Where:</span> Madison (WI), USA and Online Meeting.
     </p>
 
     <table  border="0"  cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" >
       <colgroup>
-        <col style="width:15%">
-        <col style="width:85%">
+        <col style="width:20%">
+        <col style="width:600%">
         </colgroup>
       <tbody>
+
       <tr>
+
+        <td colspan="2"><span><p class="text-small"><br><br><strong>
+              <img src="/img/PU.gif" width="12" height="12"> Key Dates
+        </strong>
+        <br><br></span></td>
+      </tr>
+      <tr>
+      <td><span><p class="text-small"> <strong>January 24, 2022</strong><br>&nbsp;</span></td> 
+      <td><span><p class="text-small"> Call for Abstracts Opens <br>&nbsp; </span></td>
+      </tr>
+      <tr>
+      <td><span><p class="text-small"> <strong>April 21, 2022</strong><br>&nbsp;</span></td>
+      <td><span><p class="text-small">  <strong>Abstracts Submission Deadline</strong> <br>&nbsp; </span></td>
+      </tr>
+
+      <tr>
+      <td><span><p class="text-small"> <strong>April 25, 2022</strong><br>&nbsp;</span></td>
+      <td><span><p class="text-small"> Late Posters Submissions Open <br>&nbsp; </span></td>
+      </tr>
+
+      <tr>
+      <td><span><p class="text-small"> <strong>May 12, 2022</strong><br>&nbsp;</span></td>
+      <td><span><p class="text-small"> Talk and/or Poster Acceptance Notifications <br>&nbsp; </span></td>
+      </tr>
+      <tr>
+      <td><span><p class="text-small"> <strong>May 19, 2022</strong><br>&nbsp;</span></td>
+      <td><span><p class="text-small"> <strong>Late Posters Submissions Deadline</strong> <br>&nbsp; </span></td>
+      </tr>
+      <tr>
+      <td><span><p class="text-small"> <strong>May 19, 2022</strong><br>&nbsp;</span></td>
+      <td><span><p class="text-small"> Late Posters Acceptance Notifications <br>&nbsp; </span></td>
+      </tr>
+      <tr>
+      <td><span><p class="text-small"> <strong>June 10, 2022</strong><br>&nbsp;</span></td>
+      <td><span><p class="text-small"> Presenters have to complete the release forms, register and confirm their participation <br>&nbsp; </span></td>
+      </tr>
+
+
+<!--
+
+      <tr>
+        
         <td colspan="2"><span><p class="text-small"><br><br><strong>
               <img src="/img/PU.gif" width="12" height="12"> Session 1 - Thursday July 29, 2021
-<!--
 Annotation and prediction of structural/functional impacts of genetic variants.
---->
+
+
         </strong>
         <br><br></span></td>
       </tr>
@@ -238,9 +281,11 @@ Annotation and prediction of structural/functional impacts of genetic variants.
             <br />
               <img src="/img/PU.gif" alt="" width="12" height="12" />
               Session 2 - Friday July 30, 2021
-<!--
+
+
 Genetic variants as effectors of change: disease and evolution. <br />
--->
+
+
 
         <br /><br />
         </strong></span></td>
@@ -354,7 +399,7 @@ Genetic variants as effectors of change: disease and evolution. <br />
             <u>Martin Kircher.</u> Charite University, Berlin, Germany.
           <br>
           <i>
-           CADD-SV -- a framework to score the effects of structural variants in health and disease.
+           CADD-SV - a framework to score the effects of structural variants in health and disease.
           </i>
           </span></td>
 
@@ -388,12 +433,14 @@ Genetic variants as effectors of change: disease and evolution. <br />
         <td><span><p class="text-small"><strong>15:20 - 15:25</strong></span></td>
         <td><span><p class="text-small">Closing remarks.</span></td>
       </tr>
-      <!--
+
+
       <tr>
         <td><span class="textzone"><strong>18:05 - 20:00</strong></span></td>
         <td><span class="textzone"><b>Online Poster session with the authors.</b></span></td>
       </tr>
-    -->
+--->
+
     </table>
     </p>
     <br>
