--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       <h4 class="title" >General info</h4>
       </div>
       <p class="text">
-      <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the Virtual 
-      <a href="https://www.iscb.org/ismbeccb2021" target=_blank>ISMB/ECCB 2021</a> Meeting<br>
-      <span style="color:#d97b2d;font-weight:400;">When:</span> 29 and 30 July, 2021.<br>
-      <span style="color:#d97b2d;font-weight:400;">Where:</span> Online Meeting.<br><br>
+      <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the
+      <a href="https://www.iscb.org/ismbeccb2022" target=_blank>ISMB 2022</a> Meeting<br>
+      <span style="color:#d97b2d;font-weight:400;">When:</span> 12 July, 2022.<br>
+      <span style="color:#d97b2d;font-weight:400;">Where:</span> Madison (WI), USA and  Online Meeting.<br><br>
      <div class="text">
      <h4 class="title" >Aims</h4>
      </div>
@@ -102,7 +102,8 @@
     The primary goal of the ISCB Variant Interpretation (VarI) community of special interest (COSI) is to outline and discuss
     the recent advances in the methodology for the annotation and  analysis of genetic variants. Building upon the experience of
     the previous VarI and SNP COSI editions
-   (<a href='pages/vari-2020.html'>Online 2020</a>,
+   (<a href='pages/vari-2021.html'>Online 2021</a>,
+    <a href='pages/vari-2020.html'>2020</a>,
     <a href='pages/vari-2019.html'>Basel 2019</a>,
     <a href='pages/vari-2018.html'>Chicago 2018</a>,
     <a href='pages/vari-2017.html'>Prague 2017</a>,
