--- a/submission.html
+++ b/submission.html
@@ -92,7 +92,7 @@
     <tr>
     <td valign=top>
     Presentation proposals and poster abstracts can be submitted through
-    <a href="https://easychair.org/my/conference?conf=ismbeccb2021abstracts#" target=_blank>EasyChair</a>.
+    <a href="https://easychair.org/conferences/?conf=ismb2022abstracts#" target=_blank>EasyChair</a>.
     Submitted abstracts should describe original or recent scientific works in the areas listed below.
     <br><br>
     <ul>
